Sign up core logic

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     html, body {
       overscroll-behavior: none;
       -webkit-overflow-scrolling: touch;
+      height: 100%; /* CRITICAL for RN Web */
     }
     
     /* Safe area padding for notch */
@@ -34,11 +35,14 @@
       padding-bottom: env(safe-area-inset-bottom);
       padding-left: env(safe-area-inset-left);
       padding-right: env(safe-area-inset-right);
+      margin: 0;
     }
     
     /* Loading state */
     #root {
-      min-height: 100vh;
+      display: flex; /* Ensure root is a flex container */
+      flex-direction: column;
+      height: 100%; /* Match body height */
       background: #FFFFFF;
     }
   </style>
